# Hackathon_5_AI_customer-success

./: README.md
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/agent/: customer_success_agent.py  formatters.py  prompts.py  sentiment.py  tools.py
backend/api/: errors.py  logging_config.py  main.py
backend/channels/: gmail_handler.py  web_form_handler.py  whatsapp_handler.py
backend/database/: queries.py  schema.sql
backend/database/migrations/: 001_initial_schema.sql
backend/k8s/: configmap.yaml  deployment-api.yaml  deployment-worker.yaml  hpa-api.yaml  hpa-worker.yaml  ingress.yaml  metrics-service.yaml  postgres-statefulset.yaml  secrets.yaml  service.yaml
backend/tests/: conftest.py
backend/tests/e2e/: test_24_hour_operation.py
backend/workers/: kafka_config.py  message_processor.py  metrics_collector.py
docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  README.md  RUNBOOK.md  TRANSITION_GUIDE.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/: layout.jsx  page.jsx
frontend/src/components/: SupportForm.jsx  ui-helpers.jsx  ui-helpers.tsx
frontend/src/lib/: apiClient.js
history/prompts/001-customer-success/: 001-create-customer-success-spec.spec.prompt.md  003-research-technology-decisions.plan.prompt.md  004-generate-implementation-tasks.tasks.prompt.md
specs/001-customer-success/: plan.md  research.md  spec.md  tasks.md
(+3 files in other folders)
