[project]
name = "customer-success-fte"
version = "0.1.0"
description = "AI Customer Success Digital FTE"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.0",
    "aiokafka>=0.10.0",
    "openai>=1.12.0",
    "twilio>=9.0.0",
    "google-api-python-client>=2.118.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "httpx>=0.27.0",
    "redis>=5.0.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
